# MultiplayerCore.Quest

./: .gitignore  Android.mk  CMakeLists.txt  CMakeLists.txt.bak  CMakeSettings.json  LICENSE.md  MultiplayerCore.Quest.code-workspace  PrepareEnvForDebugger.ps1  README.md  build.ps1  buildQMOD.ps1  copy.ps1  mod.json  mod.template.json  mod_old.json  ndk-stack.ps1  ndkpath.txt  qmod.ps1  qpm.json  qpm.shared.json  qpm_defines.cmake  rl-notes.md
.github/workflows/: Pre-Release.yml  Release.yml  buildMod.yml  buildModPR.yml
assets/: ColorsUI.bsml  LoadingIndicator.bsml  MpPerPlayerToggles.bsml  RequirementsButton.bsml  RequirementsUI.bsml
include/: CS_DataStore.hpp  GlobalFields.hpp  InvokingLock.hpp  Utilities.hpp  assets.hpp  hooking.hpp  logging.hpp  main.hpp  tasks.hpp
include/Beatmaps/: BeatSaverBeatmapLevel.hpp  LocalBeatmapLevel.hpp  NetworkBeatmapLevel.hpp  NoInfoBeatmapLevel.hpp
include/Hooks/: EnvironmentAndAvatarHooks.hpp  Hooks.hpp  NetworkConfigHooks.hpp  SessionManagerAndExtendedPlayerHooks.hpp
include/Installers/: AppInstaller.hpp  MenuInstaller.hpp  MpAppInstaller.hpp  MpMenuInstaller.hpp
include/Models/: MpStatusData.hpp
include/Networking/: NetworkPlayerEntitlementChecker.hpp
include/NodePoseSyncState/: MpNodePoseSyncStateManager.hpp  MpNodePoseSyncStatePacket.hpp
include/Objects/: BGNetDebugLogger.hpp  MpPlayersDataModel.hpp
include/Packets/: PacketSerializer.hpp
include/Patchers/: BeatmapSelectionViewPatcher.hpp  ModeSelectionPatcher.hpp  PlayerCountPatcher.hpp
include/Players/: MpPlayerData.hpp
include/ScoreSyncState/: MpScoreSyncStateManager.hpp  MpScoreSyncStatePacket.hpp
include/UI/: CenterScreenLoading.hpp  CustomBeatmapSelectionView.hpp  CustomEditableBeatmapSelectionView.hpp  DownloadedSongsGSM.hpp  DownloadedSongsGSM.hpp_old  DownloadedSongsViewController.hpp  GameServerPlayerTableCellCustomData.hpp  LobbySetupPanel.hpp  MpColorsUI.hpp  MpLoadingIndicator.hpp  MpPerPlayerUI.hpp  MpRequirementsUI.hpp
scripts/: build.ps1  bumpQPMdeps.ps1  copy.ps1  createqmod.ps1  pull-tombstone.ps1  restart-game.ps1  start-logging.ps1  validate-modjson.ps1
shared/: GlobalFields.hpp  MultiplayerCore.hpp  NetworkConfigHooks.hpp  ServerConfig.hpp  ServerConfigManager.hpp  Utilities.hpp  _config.h
shared/Beatmaps/: BeatSaverBeatmapLevel.hpp  BeatSaverPreviewMediaData.hpp  LocalBeatmapLevel.hpp  NetworkBeatmapLevel.hpp  NoInfoBeatmapLevel.hpp
shared/CodegenExtensions/: ColorUtility.hpp  EnumUtils.hpp
shared/Models/: MpStatusData.hpp
shared/Networking/: Callback.hpp  MpNetworkingEvents.hpp  MpPacketSerializer.hpp
shared/Objects/: MpEntitlementChecker.hpp  MpLevelDownloader.hpp  MpLevelLoader.hpp
shared/Players/: MpPlayerData.hpp  MpPlayerManager.hpp
shared/Repositories/: MpStatusRepository.hpp
shared/Utils/: CustomData.hpp  DnsEndPointW.hpp  EnumUtils.hpp  ExtraSongData.hpp  MethodCache.hpp  SemVerChecker.hpp  event.hpp
src/: CS_DataStore.cpp  MultiplayerCore.cpp  ServerConfig.cpp  main.cpp
src/Beatmaps/: BeatSaverBeatmapLevel.cpp  BeatSaverBeatmapLevel.cpp.bak  BeatSaverPreviewMediaData.cpp  LocalBeatmapLevel.cpp  NetworkBeatmapLevel.cpp  NoInfoBeatmapLevel.cpp
src/Hooks/: AvatarClampHooks.cpp  ConnectionDiagnosticHooks.cpp  CustomLevelHooks.cpp  DataModelBinderHooks.cpp  EnvironmentAndAvatarHooks.cpp  ForwardCompatHook.cpp  GameServerPlayerTableCellHooks.cpp  GraphAPIClientHooks.cpp  InstallerHooks.cpp  IntroAnimationHooks.cpp  LogBaseGameMethordHooks.cpp  LoggingHooks.cpp  MainSystemBinderHooks.cpp  MaxPlayerHooks.cpp  MenuRpcManager.cpp  ModeSelectionHooks.cpp  MultiplayerLevelFinishedControllerHook.cpp  MultiplayerLobbyEnvironmentAndAvatarHooks.cpp  MultiplayerLobbyPositionHooks.cpp  MultiplayerMenuBinderHooks.cpp  MultiplayerStatusHook.cpp  MultiplayerStatusModelHooks.cpp  MultiplayerUnavailableReasonHook.cpp  MultiplayerUnavailableReasonHooks.cpp  NetworkConfigHooks.cpp  NetworkPlayerEntitlementCheckerHooks.cpp  NoLevelSpectatorHook.cpp  OutroAnimationHooks.cpp  PlatformAuthenticationTokenProviderHooks.cpp  PlayerCountHooks.cpp  ProvideBeatsaverLevelHooks.cpp  (+3 more)
(+66 files in other folders)
